# linear_notifications

./: MANIFEST.in  README.md  pyproject.toml
linear_notifier/: __init__.py  app.py  config_store.py  i18n.py  install_desktop.py  keyring_manager.py  linear_api.py  main.py  main_window.py  settings_window.py
linear_notifier/data/: com.example.LinearNotifier.desktop
linear_notifier/data/ui/: main.ui  settings.ui
